Add logger and fix None.get error

--- a/application.conf
+++ b/application.conf
@@ -8,6 +8,6 @@ reviews = {
 
 traffic = {
     traffic_domain = web.vstat.info
-    session_token = " "
+    session_token =
     traffic_data_expiration = 1 hour
 }
