--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,32 +1,30 @@
 version: '2'
 services:
-  zookeeper:
-    image: confluentinc/cp-zookeeper:latest
-    environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
-    ports:
-      - 22181:2181
-
-  kafka:
-    image: confluentinc/cp-kafka:latest
-    depends_on:
-      - zookeeper
-    ports:
-      - 29092:29092
-    environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092,PLAINTEXT_HOST://localhost:29092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-
   redis:
     restart: always
     image: redis:6.2.0
+    volumes:
+      - redis-db-data:/data
     ports:
       - "6379:6379"
     environment:
       - DEBUG=false
     command: redis-server --notify-keyspace-events KEA
+
+  backend:
+    image: backend
+    depends_on:
+      - redis
+    ports:
+      - "8080:8080"
+    environment:
+      - REDIS_SERVER=redis
+    build:
+      context: ./
+      dockerfile: Dockerfile
+      args:
+        SBT_VERSION: "1.8.2"
+        SCALA_VERSION: "2.13.10"
+
+volumes:
+  redis-db-data:
