--- a/application.conf
+++ b/application.conf
@@ -1,9 +1,9 @@
 first_data_collect_time = 1 hour
 update_interval = 5 minutes
-max_domain_response = 10
+max_domain_response = 1000
 
 reviews = {
-    domains_url = https://www.trustpilot.com/categories/jewelry_store?sort=latest_review
+    categories_url = https://www.trustpilot.com/categories
     reviews_url = https://www.trustpilot.com/api/categoriespages/
 }
 
